// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WizardSTepButtons should add custom className to toolbar 1`] = `
<RenderWithProvider>
  <ReactFinalForm
    onSubmit={[Function]}
  >
    <WizardStepButtons
      buttonLabels={
        Object {
          "back": "Back",
          "cancel": "Cancel",
          "next": "Next",
          "submit": "Submit",
        }
      }
      buttonsClassName="foo-class"
      formOptions={
        Object {
          "getState": [Function],
          "handleSubmit": [MockFunction],
          "onCancel": [MockFunction],
          "submit": [MockFunction],
          "valid": true,
        }
      }
      handleNext={[MockFunction]}
      handlePrev={[MockFunction]}
    >
      <footer
        className="pf-c-wizard__footer foo-class"
      >
        <FormSpy>
          <NextButton
            getState={[Function]}
            handleNext={[MockFunction]}
            handleSubmit={[MockFunction]}
            nextLabel="Next"
            onCancel={[MockFunction]}
            submit={[MockFunction]}
            submitLabel="Submit"
            valid={true}
          >
            <Component
              isDisabled={false}
              onClick={[Function]}
              type="button"
              variant="primary"
            >
              <button
                aria-disabled={null}
                aria-label={null}
                className="pf-c-button pf-m-primary"
                data-ouia-component-id={null}
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                Submit
              </button>
            </Component>
          </NextButton>
          <Component
            onClick={[MockFunction]}
            type="button"
            variant="secondary"
          >
            <button
              aria-disabled={null}
              aria-label={null}
              className="pf-c-button pf-m-secondary"
              data-ouia-component-id={null}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[MockFunction]}
              tabIndex={null}
              type="button"
            >
              Back
            </button>
          </Component>
          <Component
            onClick={[MockFunction]}
            type="button"
            variant="link"
          >
            <button
              aria-disabled={null}
              aria-label={null}
              className="pf-c-button pf-m-link"
              data-ouia-component-id={null}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[MockFunction]}
              tabIndex={null}
              type="button"
            >
              Cancel
            </button>
          </Component>
        </FormSpy>
      </footer>
    </WizardStepButtons>
  </ReactFinalForm>
</RenderWithProvider>
`;

exports[`<WizardSTepButtons should render correctly 1`] = `
<RenderWithProvider>
  <ReactFinalForm
    onSubmit={[Function]}
  >
    <WizardStepButtons
      buttonLabels={
        Object {
          "back": "Back",
          "cancel": "Cancel",
          "next": "Next",
          "submit": "Submit",
        }
      }
      formOptions={
        Object {
          "getState": [Function],
          "handleSubmit": [MockFunction],
          "onCancel": [MockFunction],
          "submit": [MockFunction],
          "valid": true,
        }
      }
      handleNext={[MockFunction]}
      handlePrev={[MockFunction]}
    >
      <footer
        className="pf-c-wizard__footer "
      >
        <FormSpy>
          <NextButton
            getState={[Function]}
            handleNext={[MockFunction]}
            handleSubmit={[MockFunction]}
            nextLabel="Next"
            onCancel={[MockFunction]}
            submit={[MockFunction]}
            submitLabel="Submit"
            valid={true}
          >
            <Component
              isDisabled={false}
              onClick={[Function]}
              type="button"
              variant="primary"
            >
              <button
                aria-disabled={null}
                aria-label={null}
                className="pf-c-button pf-m-primary"
                data-ouia-component-id={null}
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                onClick={[Function]}
                tabIndex={null}
                type="button"
              >
                Submit
              </button>
            </Component>
          </NextButton>
          <Component
            onClick={[MockFunction]}
            type="button"
            variant="secondary"
          >
            <button
              aria-disabled={null}
              aria-label={null}
              className="pf-c-button pf-m-secondary"
              data-ouia-component-id={null}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[MockFunction]}
              tabIndex={null}
              type="button"
            >
              Back
            </button>
          </Component>
          <Component
            onClick={[MockFunction]}
            type="button"
            variant="link"
          >
            <button
              aria-disabled={null}
              aria-label={null}
              className="pf-c-button pf-m-link"
              data-ouia-component-id={null}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[MockFunction]}
              tabIndex={null}
              type="button"
            >
              Cancel
            </button>
          </Component>
        </FormSpy>
      </footer>
    </WizardStepButtons>
  </ReactFinalForm>
</RenderWithProvider>
`;
